--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,8 +1,30 @@
-<!--index.wxml-->
-<view class="container">
-
-  <!-- 用户 openid -->
-  <view class="userinfo">
+<!-- index.wxml -->
+<view>
+  <i-grid>
+    <i-row>
+      <navigator url="/expressQueryPackage/pages/express/express">
+        <i-grid-item>
+          <i-grid-icon>
+            <van-icon size="28px" name="shopping-cart" />
+          </i-grid-icon>
+          <i-grid-label>快递查询</i-grid-label>
+        </i-grid-item>
+      </navigator>
+      <i-grid-item>
+        <i-grid-icon>
+          <van-icon size="28px" name="shopping-cart" />
+        </i-grid-icon>
+        <i-grid-label>快递查询</i-grid-label>
+      </i-grid-item>
+      <i-grid-item>
+        <i-grid-icon>
+          <van-icon size="28px" name="shopping-cart" />
+        </i-grid-icon>
+        <i-grid-label>快递查询</i-grid-label>
+      </i-grid-item>
+    </i-row>
+  </i-grid>
+  <!-- <view class="userinfo">
     <button 
       open-type="getUserInfo" 
       bindgetuserinfo="onGetUserInfo"
@@ -14,8 +36,6 @@
     </view>
   </view>
 
-
-  <!-- 上传图片 -->
   <view class="uploader">
     <view class="uploader-text" bindtap="doUpload">
       <text>上传图片</text>
@@ -25,19 +45,15 @@
     </view>
   </view>
 
-
-  <!-- 操作数据库 -->
   <view class="uploader">
     <navigator url="../databaseGuide/databaseGuide" open-type="navigate" class="uploader-text">
       <text>前端操作数据库</text>
     </navigator>
   </view>
-
-  <!-- 新建云函数 -->
   <view class="uploader">
     <navigator url="../addFunction/addFunction" open-type="navigate" class="uploader-text">
       <text>快速新建云函数</text>
     </navigator>
   </view>
-    <van-button type="default">默认按钮</van-button>
+    <van-button type="default">默认按钮</van-button> -->
 </view>
