--- a/miniprogram/expressQueryPackage/pages/express/express.wxss
+++ b/miniprogram/expressQueryPackage/pages/express/express.wxss
@@ -7,7 +7,7 @@ page {
 .top_view{
   width: 100%;
   height: 380rpx;
-  background: #409EFF;
+  background: #2d8cf0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,4 +16,7 @@ page {
 .panel_view{
   width: 580rpx;
   margin-top: 60rpx;
+}
+.cell-index--van-cell__left-icon{
+  margin-top: 10rpx;
 }
