--- a/miniprogram/expressQueryPackage/pages/express/express.wxss
+++ b/miniprogram/expressQueryPackage/pages/express/express.wxss
@@ -16,6 +16,7 @@ page {
 .panel_view{
   width: 580rpx;
   margin-top: 60rpx;
+  border-radius: 20rpx;
 }
 .cell-index--van-cell__left-icon{
   margin-top: 10rpx;
@@ -26,3 +27,7 @@ page {
 .err_view .text{
   font-size: 28rpx;
 }
+/* .field-index--van-field{
+  padding: 5px 15px!important;
+  border-radius: 10px;
+} */
