--- a/miniprogram/expressQueryPackage/pages/express/express.wxml
+++ b/miniprogram/expressQueryPackage/pages/express/express.wxml
@@ -1,18 +1,18 @@
 <view>
   <van-toast id="van-toast" />
   <view class="top_view">
-    <van-button round size="small" bind:click="expressSelechClick">快递选择：自动</van-button>
+    <van-button round size="small" bind:click="expressSelechClick">快递选择：{{expressSelech.name}}</van-button>
     <i-panel i-class="panel_view">
-      <van-field value="{{ expressNumber }}" placeholder="请输入快递单号" left-icon="logistics" use-button-slot use-icon-slot clearable bind:change="onChange"  bind:confirm="onConfirm">
+      <van-field value="{{ expressNumber }}" placeholder="请输入快递单号" left-icon="logistics" use-button-slot use-icon-slot clearable bind:change="onChange" bind:confirm="onConfirm">
         <van-button slot="button" size="small" round bind:click="onQueryClick">查询</van-button>
         <i-icon slot="icon" type="scan" size="24" color="#2d8cf0" />
       </van-field>
     </i-panel>
   </view>
-  <view class="history_view" wx:if="{{history_view}}">
+  <view class="history_view" wx:if="{{buttomView === 1}}">
     <van-block title="历史记录">
       <van-cell-group wx:if="{{historyList.length}}">
-        <van-cell wx:for="{{historyList}}" wx:key="index" title="{{item.LogisticCode}}" value="{{item.ShipperCode}}" />
+        <van-cell wx:for="{{historyList}}" is-link data-item="{{item}}" bind:click="historyClick" wx:key="index" title="{{item.LogisticCode}}" value="{{item.name}}" />
       </van-cell-group>
       <view class="err_view" wx:else>
         <i-icon type="emoji_fill" size="28" color="#80848f" />
@@ -20,7 +20,7 @@
       </view>
     </van-block>
   </view>
-  <view class="log_view" wx:else>
+  <view class="log_view" wx:elif="{{buttomView === 2}}">
     <van-block title="物流信息">
       <van-steps wx:if="{{steps.length}}" steps="{{ steps }}" active="{{ steps.length - 1 }}" direction="vertical" active-color="#2d8cf0" />
       <view class="err_view" wx:else>
@@ -28,5 +28,8 @@
         <view class="text">暂无轨迹信息</view>
       </view>
     </van-block>
+  </view>
+  <view class="loading_class" wx:else>
+    <van-loading type="spinner" size="20px" color="#2d8cf0" />
   </view>
 </view>
