--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,5 +1,6 @@
 /**app.wxss**/
 @import "./style/index.wxss";
+@import "./icons/iconfont.wxss";
 .container {
   display: flex;
   flex-direction: column;
