--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,7 @@
 <!-- index.wxml -->
 <view>
+  <van-dialog id="van-dialog" />
+  <van-notify id="van-notify" />
   <swiper indicator-dots="{{true}}" autoplay="{{true}}" circular="{{true}}" vertical="{{true}}">
     <block wx:for="{{imgUrls}}" wx:key="{{item}}">
       <swiper-item>
@@ -9,7 +11,7 @@
   </swiper>
   <i-grid i-class="grid_view">
     <van-row>
-      <navigator url="/expressQueryPackage/pages/express/express">
+      <navigator url="/package/expressQueryPackage/pages/express/express">
         <i-grid-item i-class="grid_item">
           <i-grid-icon>
             <van-icon size="28px" name="https://vpssss.oss-cn-qingdao.aliyuncs.com/user-util/icons/in_transit.png?x-oss-process=style/compression-image" />
@@ -17,12 +19,14 @@
           <i-grid-label>快递查询</i-grid-label>
         </i-grid-item>
       </navigator>
-      <i-grid-item i-class="grid_item">
-        <i-grid-icon>
-          <van-icon size="28px" name="https://vpssss.oss-cn-qingdao.aliyuncs.com/user-util/icons/idea.png?x-oss-process=style/compression-image" />
-        </i-grid-icon>
-        <i-grid-label>敬请期待</i-grid-label>
-      </i-grid-item>
+      <navigator url="/package/translationPackage/pages/translation/translation">
+        <i-grid-item i-class="grid_item">
+          <i-grid-icon>
+            <van-icon size="28px" name="https://vpssss.oss-cn-qingdao.aliyuncs.com/user-util/icons/faq.png?x-oss-process=style/compression-image" />
+          </i-grid-icon>
+          <i-grid-label>智能翻译</i-grid-label>
+        </i-grid-item>
+      </navigator>
       <i-grid-item i-class="grid_item">
         <i-grid-icon>
           <van-icon size="28px" name="https://vpssss.oss-cn-qingdao.aliyuncs.com/user-util/icons/idea.png?x-oss-process=style/compression-image" />
