--- a/miniprogram/package/expressQueryPackage/pages/express/express.wxml
+++ b/miniprogram/package/expressQueryPackage/pages/express/express.wxml
@@ -1,11 +1,11 @@
 <view>
   <van-toast id="van-toast" />
-<van-notice-bar
+  <!-- <van-notice-bar
   left-icon="https://vpssss.oss-cn-qingdao.aliyuncs.com/user-util/icons/systemprompt.png?x-oss-process=style/compression-image"
   mode="link"
   text="点击阅读《使用须知》"
   bind:click="noticeBarChange"
-/>
+/> -->
   <view class="top_view">
     <van-button round size="small" plain custom-class="custom_class_plain" type="primary" bind:click="expressSelechClick">
       快递选择：{{expressSelech.name}}
@@ -16,9 +16,12 @@
   </view>
   <view class="history_view" wx:if="{{buttomView === 1}}">
     <van-block title="历史记录">
-      <van-cell-group wx:if="{{historyList.length}}">
-        <van-cell wx:for="{{historyList}}" is-link data-item="{{item}}" bind:click="historyClick" wx:key="index" label="{{item.state === '1' ? '快递收件' : item.state === '2' ? '快递在途中' : item.state === '3' ? '快递已签收' : item.state === '4' ? '问题件' : '快递状态未知'}}" icon="{{item.logo}}" title="{{item.name}}" value="{{item.no}}" />
-      </van-cell-group>
+      <view wx:if="{{historyList.length}}">
+        <van-cell-group>
+          <van-cell wx:for="{{historyList}}" is-link data-item="{{item}}" bind:click="historyClick" wx:key="index" label="{{item.state === '1' ? '快递收件' : item.state === '2' ? '快递在途中' : item.state === '3' ? '快递已签收' : item.state === '4' ? '问题件' : '快递状态未知'}}" icon="{{item.logo}}" title="{{item.name}}" value="{{item.no}}" />
+        </van-cell-group>
+        <i-load-more tip="没有更多了" loading="{{ false }}" />
+      </view>
       <view class="err_view" wx:else>
         <i-icon type="emoji_fill" size="28" color="#80848f" />
         <view class="text">暂无历史记录</view>
