--- a/miniprogram/pages/myapp/myapp.wxml
+++ b/miniprogram/pages/myapp/myapp.wxml
@@ -1,8 +1,9 @@
 <!-- index.wxml -->
 <view>
+  <van-dialog id="van-dialog" />
   <view class="top_avatar">
     <van-button wx:if="{{!avatarUrl}}" custom-class="custom_class" type="primary" round size="normal" bind:getuserinfo="onGetUserInfo" open-type="getUserInfo">
-      爱登不登
+      登 录
     </van-button>
     <i-avatar wx:else src="{{avatarUrl}}" size="large" shape="square"></i-avatar>
   </view>
@@ -10,7 +11,7 @@
     <van-cell title="{{userInfo.nickName}}" value="性别：{{userInfo.gender === 1 ? '男' :  userInfo.gender === 1 ? '女' : '人妖'}}" label="{{userInfo.city}}" />
   </van-cell-group>
   <van-cell-group custom-class="myapp_view">
-    <van-cell icon="records" is-link title="反馈" size="large" />
-    <van-cell icon="info-o" is-link title="关于" size="large" />
+    <van-cell icon="records" is-link title="客服" size="large" bind:click="serviceClick" />
+    <van-cell icon="info-o" is-link title="关于" size="large" url="/pages/about/about" />
   </van-cell-group>
 </view>
