--- a/miniprogram/package/expressQueryPackage/pages/express/express.wxml
+++ b/miniprogram/package/expressQueryPackage/pages/express/express.wxml
@@ -1,11 +1,5 @@
 <view>
   <van-toast id="van-toast" />
-  <!-- <van-notice-bar
-  left-icon="https://vpssss.oss-cn-qingdao.aliyuncs.com/user-util/icons/systemprompt.png?x-oss-process=style/compression-image"
-  mode="link"
-  text="点击阅读《使用须知》"
-  bind:click="noticeBarChange"
-/> -->
   <view class="top_view">
     <van-button round size="small" plain custom-class="custom_class_plain" type="primary" bind:click="expressSelechClick">
       快递选择：{{expressSelech.name}}
@@ -38,6 +32,6 @@
     </van-block>
   </view>
   <view class="loading_class" wx:else>
-    <van-loading type="spinner" size="20px" color="#0A8D80" />
+    <van-loading type="spinner" size="20px" color="#0b9fdf" />
   </view>
 </view>
