--- a/miniprogram/package/expressQueryPackage/pages/express/express.wxss
+++ b/miniprogram/package/expressQueryPackage/pages/express/express.wxss
@@ -8,7 +8,7 @@ page {
 .top_view {
   width: 100%;
   height: 380rpx;
-  background: #0A8D80;
+  background: #0b9fdf;
   display: flex;
   flex-direction: column;
   justify-content: center;
