--- a/miniprogram/package/translationPackage/pages/translation/translation.wxss
+++ b/miniprogram/package/translationPackage/pages/translation/translation.wxss
@@ -44,8 +44,8 @@ page {
   text-align: center;
 }
 .view_button_custom{
-  background-color:#558b2f !important;
-  border:1px solid #558b2f !important;
+  background-color:#61a934 !important;
+  border:1px solid #61a934 !important;
 }
 .bottom_view{
   background: #fff;
