--- a/miniprogram/package/translationPackage/pages/translation/translation.wxss
+++ b/miniprogram/package/translationPackage/pages/translation/translation.wxss
@@ -37,7 +37,6 @@ page {
   background: #fff;
   position: fixed;
   width: 100%;
-  z-index: 1000;
 }
 .radio_label{
   line-height: 100rpx;
@@ -53,4 +52,16 @@ page {
 }
 .bottom_view_text{
   padding: 0 15px;
+}
+.view_selech{
+  position: absolute;
+  z-index: 9999;
+}
+.mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: #000;
+  z-index: 9000;
+  opacity: 0.7;
 }
