--- a/miniprogram/miniprogram_npm/vant-weapp/collapse-item/index.wxml
+++ b/miniprogram/miniprogram_npm/vant-weapp/collapse-item/index.wxml
@@ -29,7 +29,9 @@
   </van-cell>
   <view
     class="van-collapse-item__wrapper"
-    style="max-height: {{ contentHeight }};"
+    style="height: {{ contentHeight }};"
+    animation="{{ animationData }}"
+    bind:transitionend="onTransitionEnd"
   >
     <view
       class="van-collapse-item__content content-class"
