--- a/miniprogram/miniprogram_npm/vant-weapp/field/index.wxml
+++ b/miniprogram/miniprogram_npm/vant-weapp/field/index.wxml
@@ -25,7 +25,7 @@
       auto-height="{{ autosize }}"
       placeholder="{{ placeholder }}"
       placeholder-style="{{ placeholderStyle }}"
-      placeholder-class="{{ error ? 'van-field__input--error' : '' }}"
+      placeholder-class="{{ error ? 'van-field__input--error' : 'van-field__placeholder' }}"
       cursor-spacing="{{ cursorSpacing }}"
       adjust-position="{{ adjustPosition }}"
       show-confirm-bar="{{ showConfirmBar }}"
@@ -44,7 +44,7 @@
       maxlength="{{ maxlength }}"
       placeholder="{{ placeholder }}"
       placeholder-style="{{ placeholderStyle }}"
-      placeholder-class="{{ error ? 'van-field__input--error' : '' }}"
+      placeholder-class="{{ error ? 'van-field__input--error' : 'van-field__placeholder' }}"
       confirm-type="{{ confirmType }}"
       confirm-hold="{{ confirmHold }}"
       cursor-spacing="{{ cursorSpacing }}"
